src/test/ui/for/for-loop-has-unit-body.stderr
error[E0282]: type annotations needed
  --> $DIR/for-loop-has-unit-body.rs:4:18
   |
LL |         unsafe { std::mem::uninitialized() }
   |                  ^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type for `T`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
